--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,17 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node",
-      "config": {
-        "installCommand": "npm install"
+    "version": 2,
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": { "installCommand": "npm install" }
       }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
-  ],
-  "static": {
-    "public": "public"
+    ],
+    "routes": [
+      { "handle": "filesystem" },
+      {
+        "src": "/.*",
+        "dest": "/public"
+      }
+    ]
   }
-}
