--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,10 @@
       {
         "src": "package.json",
         "use": "@vercel/static-build",
-        "config": { "installCommand": "npm install" }
+        "config": { 
+            "installCommand": "npm install",
+            "outputDirectory": "public"
+        }
       }
     ],
     "routes": [
